syntax = "proto3";

option csharp_namespace = "WebScraping.OpenAI.Grpc";

package chatGpt;

service ChatGpt {
  rpc AskQuestion (AskQuestionRequest) returns (AskQuestionReply);
}

message AskQuestionRequest {
  string ask = 1;
}

message AskQuestionReply {
  string responseIA = 1;
}